# pytuber

./: .pre-commit-config.yaml  README.md  pyproject.toml
pytuber/: main.py  typer_funcs.py  typer_main.py  youtube_func.py
