[tool.poetry]
name = "pytuber"
version = "0.1.0"
description = ""
authors = ["Evan Baird <evanbaird@evans-mbp.lan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-clarity = "^1.0.1"
pytest-emoji = "^0.2.0"
pytest-instafail = "^0.5.0"
ipython = "^8.24.0"
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --emoji -vvv -p no:warnings"
xfail_strict = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
